# rest_task

./: README.md  main.py  pyproject.toml
api/: validators.py  views.py
db/: atomictransaction.py  connection.py
db/models/: main_object.py
errors/: errors.py
tests/: test_transaction.py
