[tool.poetry]
name = "rest-task"
version = "0.1.0"
description = ""
authors = ["gkuvykin <gkuvykin@dengabank.ru>"]
readme = "README.md"
packages = [{include = "rest_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
aioredis = "2.0.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
